# openenv-city-swarm-commander

./: .gitignore  Dockerfile  README.md  environment.py  generate_screenshot.py  hf_deploy.py  inference.py  inference_v2.py  openenv.yaml  pyproject.toml  requirements.txt  view_live.py
data/: city_grid.json  deliveries.json
graders/: easy.py  hard.py  medium.py
server/: __init__.py  app.py  graders.py
tests/: test_environment.py
